# coleridge

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: gh-action-python.yml
coleridge/: coleridge.py  decorated.py  decorator.py  get_types.py  rabbit.py  result.py
coleridge/models/: __init__.py  connection.py  response.py
tests/: conftest.py
