[tool.poetry]
name = "coleridge"
version = "0.1.0"
description = ""
authors = ["Fred Pirani <freonius@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.2"
pyyaml = "^6.0.2"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"
ruff = "^0.6.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
requests = "^2.32.3"
coverage-badge = "^1.1.2"
pylint = "^3.2.6"
interrogate = "^1.7.0"
pdoc = "^14.6.0"
bandit = "^1.7.9"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
